# watson

./: Dockerfile  pyproject.toml
watson/: __main__.py  config.py  fastapi.py
